# whisper-finetune

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: multi-dataset.example.yaml  train.whisper-medium.akmalsultanov.yaml  train.whisper-medium.akmalsultanov_stage_smoke.yaml  train.whisper-medium.akmalsultanov_stagea.yaml  train.whisper-medium.akmalsultanov_stageb.yaml  train.whisper-small.akmalsultanov.yaml  train.whisper-small.akmalsultanov_smoke.yaml
configs/deepspeed/: zero1.json  zero2.json
src/whisper_finetune/: __init__.py  augmentation.py  collator.py  config.py  data.py  export_augmented_samples.py  hub.py  metrics.py  patches.py  prompted_trainer.py  train.py
tests/: test_augmentation.py  test_collator.py  test_config.py  test_data.py  test_patches.py  test_prompted_trainer.py  test_train.py
