[project]
name = "whisper-finetune"
version = "0.1.0"
description = "Config-driven Whisper finetuning with multiple Hugging Face datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.0",
    "datasets[audio]>=3.0.0",
    "deepspeed>=0.15.0",
    "huggingface-hub>=0.28.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
whisper-finetune-train = "whisper_finetune.train:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_finetune"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
